# sample_FIWARE

./: .gitignore  README.md  Step12.py  Step20WebServer.py  docker-compose.yml
sample1/: README.md  Step02.py  Step14.py  docker-compose.yml
sample10_log/: Step00_makedir.sh  docker-compose.yml  test.py
sample1_OrionAndQuantumLeap/: FiwareAPI.py  Step01_orion_make_entities.py  Step11.py  Step11_orion_subscriptions_to_quantumleap.py  Step13.py  Step20_WebServer.py  Step31.py  Step31_orion_subscriptions_to_webserver.py  Step32_orion_update_entities.py  Step41.py  Step41_orion_registrations_to_webserver.py  Step42_orion_get_entities.py  config.ini  docker-compose.yml
sample2_OrionClaster/: README.md  docker-compose.yml
sample3_OrionMulti/: FiwareAPI.py  Step032_orion1_get_entities.py  Step102_orion3_get_entities.py  Step104_orion2_get_entities.py  Step111_orion3_subscriptions_to_orion2.py  Step11_orion3_make_entities.py  Step122_orion3_set_entities.py  Step12_orion3_get_entities.py  Step13_orion2_registrations_to_orion3.py  Step14_orion2_get_entities.py  Step15_orion1_registrations_to_orion2.py  docker-compose.yml
sample3_OrionMulti1/: Step012_orion2_get_entities.py  Step022_orion1_get_entities.py  Step031_orion1_set_entities.py  Step034_orion3_get_entities.py  Step101_orion3_make_entities.py  Step103_orion2_make_entities.py  (+6 more)
sample7_OrionAndCKAN/ckan/plagin/ckanext-sample/: setup.cfg
sample7_OrionAndCKAN/ckan/plagin/ckanext-sample/ckanext/sample/assets/: webassets.yml
sample7_OrionAndCKAN/ckan/plagin/ckanext-sample/ckanext/sample/tests/: test_helpers.py  test_plugin.py  test_views.py
sample7_OrionAndCKAN/ckan/plagin/ckanext-sample/ckanext/sample/tests/logic/: test_auth.py
(+158 files in other folders)
